# sorting

./: .gitignore  CMakeLists.txt  Cargo.toml  main.cpp
.cache/clangd/index/: bubble.cpp.5A7EC0AF34A957BB.idx  bubble.h.2132434DDA0DE045.idx  insertion.cpp.5FB228B95EA7BDA9.idx  insertion.h.694608691FDE36C2.idx  main.cpp.6890761DB845012E.idx  merge.cpp.8E2E549BC184F97F.idx  merge.h.95C5EF2314DAF004.idx  pigeonhole.cpp.BD3163E9B43693A1.idx  pigeonhole.h.A7072B3E2245CF50.idx  print.cpp.725D54CD121F681B.idx  print.h.46D43781BEF91E5C.idx  selection.cpp.D420C82523ECD307.idx  selection.h.99D5CB48EB335873.idx  test.cpp.739E0A880C26D38B.idx
Contents/Resources/DWARF/: merge
algorithms/: merge  merge.cpp  selection  selection.cpp
data/: million.txt  million0.txt  million1.txt  million2.txt  million3.txt  million4.txt  million5.txt  million6.txt  million7.txt  million8.txt  million9.txt  pi.txt
data/test_results/: results_1.txt  results_2.txt  results_3.txt  results_4.txt  results_5.txt  test_results.txt
docs/: cmake_handbook.md
docs/.obsidian/: app.json  workspace
include/: bogo.h  insertion.h  merge.h  pigeonhole.h  print.h  quick.h  selection.h
src/: bogo.cpp  bubble.cpp  insertion.cpp  main.rs  merge.cpp  pigeonhole.cpp  print.cpp  quick.cpp  selection.cpp  selection.py  selection.rs
test/: random_gen.py  test.cpp
